# citerus

./: .gitignore  LICENSE  README.md  setup.cfg
citerus/: citerus.py  citeruslogo.py  cryptodbreader.py  venues.py
