[metadata]
name = citerus
version = 0.1.0

author = Matteo Campanelli
author_email = matteo.campanelli@gmail.com
url = https://github.com/matteocam/citerus
description = citerus retrieves your crypto citations
long_description = file: README.md
long_description_content_type = text/markdown
keywords = citations, bibliography, latex
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:

install_requires =
    textual >= 0.45.0
    rich >= 13.7.0
    GitPython >= 3.1.41
    pyperclip

[options.entry_points]
console_scripts = 
    citerus = citerus.citerus:main
    cr = citerus.citerus:main

